<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    tools:context=".presentation.ui.CheckReceiverDetailFragment">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_check_detail_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cek_detail_penerima"
        android:textColor="@color/primary_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_avatar_receiver"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/circular_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_account_name_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dummy_name"
        android:textColor="@color/primary_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar_receiver" />

    <TextView
        android:id="@+id/tv_bank_name_account_bank_receiver"
        style="@style/RegulerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_bank_name_and_Account_number"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_name_receiver" />

    <TextView
        style="@style/LightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="223dp"
        android:text="@string/pastikan_detail_penerima_transfer_benar"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/PrimaryActiveButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="275dp"
        android:contentDescription="@string/lanjutkan"
        android:fontFamily="@font/calibri"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/lanjutkan"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_receiver"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="335dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/simpan_penerima"
        android:fontFamily="@font/calibri"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/simpan_penerima"
        android:textColor="@color/primary_blue"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/primary_blue"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>