<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_marginTop="5dp"
    android:layout_marginHorizontal="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/avatarImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/circular_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/accountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/avatarImage"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/bankName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_bank_name"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/avatarImage"
            app:layout_constraintTop_toBottomOf="@+id/accountName"/>

        <TextView
            android:id="@+id/accountNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uncensored_dummy_acc_number_no"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/avatarImage"
            app:layout_constraintTop_toBottomOf="@+id/bankName"/>

        <ImageView
            android:id="@+id/editButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/menu_icon"
            android:src="@drawable/baseline_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>