<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/nama_penerima_title"
        style="@style/RegulerText"
        android:textColor="@color/grey"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/dummy_name"
        style="@style/BoldText"
        android:textColor="@color/primary_blue"/>

    <TextView
        android:id="@+id/tv_bank_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_bank_num"
        android:text="@string/dummy_bank_name"
        style="@style/RegulerText"
        android:textSize="12sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tv_bank_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toEndOf="@id/tv_bank_name"
        android:text="@string/dummy_acc_num"
        style="@style/RegulerText"
        android:textSize="12sp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bank_num"/>




</androidx.constraintlayout.widget.ConstraintLayout>