<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.fromQR.TransferInputFromQRFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/tombol_kembali"
        android:src="@drawable/back_button_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/circular_background"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/accountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_blue"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/avatarImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/bankNameAndAccountNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_bank_name_and_Account_number"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/accountName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nominal"
        android:textColor="@color/primary_blue"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/bankNameAndAccountNo"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amountTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:placeholderText="0"
        app:prefixText="Rp"
        app:prefixTextColor="@color/black"
        app:expandedHintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:placeholderTextAppearance="@font/calibri">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sourceAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rekening_sumber"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/amountTextInputLayout"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/userInfoCardView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="10dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@+id/sourceAccount"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/userAccountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_name"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/userAccountNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_acc_number"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/userAccountName"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/userAccountBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_account_balance"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/userAccountNo"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="150dp"
        android:src="@drawable/bg_account"
        app:layout_constraintTop_toBottomOf="@+id/sourceAccount"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/berita"
        android:textColor="@color/primary_blue"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/userInfoCardView"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NoteTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukan_berita"
        android:textColorHint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/Note">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/lanjutkan"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        style="@style/PrimaryActiveButton"
        app:layout_constraintTop_toBottomOf="@id/NoteTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>