<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_transaksi"
        style="@style/RegulerText"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_trans_method_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Metode Transfer"
        style="@style/RegulerText"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintStart_toEndOf="@id/tv_trans_method"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_trans_method"
        style="@style/RegulerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sesama_bank"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_trans_method_title" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/tv_trans_method_title"/>

    <TextView
        android:id="@+id/tv_trans_total_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_transaksi"
        android:layout_marginTop="7dp"
        android:layout_marginStart="4dp"
        style="@style/RegulerText"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toEndOf="@id/tv_trans_total"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_trans_total"
        style="@style/RegulerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/rp_10_000"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintTop_toBottomOf="@id/tv_trans_total_title"/>



</androidx.constraintlayout.widget.ConstraintLayout>